--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,8 +12,11 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
+                <!-- This Django url syntax refers to the path name in urlpatterns.py -->
                 <form action="{% url 'index' %}" method="post">
+                    <!-- Inbuilt Django security measure against request forgeries-->
                     {% csrf_token %}
+                    <!-- Django form fields implanted into HTML form as context -->
                     {{ form }}
                 </form>
                 <div>
@@ -23,7 +26,8 @@
                     <a href="{% url 'new' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <!-- Remember that Django url syntax can also take arguments -->
+                    <a href="{% url 'entry' random_entries|random %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
@@ -33,6 +37,5 @@
                 {% endblock %}
             </div>
         </div>
-
     </body>
 </html>
